test-suite/bugs/closed/shouldfail/2846.v
Variable R : Type.

Inductive I : R := c : R.
